# ie0217

./: holaMundo.cpp
.github/workflows/: ci-cd_Tarea7.yml  ci.yml  ciTarea7.yml
Laboratorios/Laboratorio1/: main.cpp
Laboratorios/Laboratorio10/: README.md
Laboratorios/Laboratorio11/: README.md
Laboratorios/Laboratorio2/: Doxyfile  Makefile  README.md
Laboratorios/Laboratorio3/: README.md
Laboratorios/Laboratorio4/: README.md
Laboratorios/Laboratorio5/: README.md
Laboratorios/Laboratorio6/: Makefile  README.md
Laboratorios/Laboratorio8/: conditions_race.cpp
Laboratorios/Laboratorio9/: README.md
Sesiones/: README.md
Sesiones/Sesion1/: README.md  adiosMundo.cpp  adiosMundoExe  holaMundo.cpp  holaMundoExe
Sesiones/Sesion11/: README.md
Sesiones/Sesion13/: README.md  mongoDB.cpp
Sesiones/Sesion14/: README.md  ejemploFinal.cpp  ejemplosVarios.cpp
Sesiones/Sesion15/: README.md
Sesiones/Sesion16/: README.md
Sesiones/Sesion2/: .gitkeep  README.md  codigo1Sesion2.cpp  codigoAlcanceVar.cpp  codigoAnidacionesDeIf.cpp  codigoArgFunc.cpp  codigoArgMain.cpp  codigoBucles.cpp  codigoEstructuras.cpp  codigoFuncOverload.cpp  codigoPrototipoFunc.cpp  codigoReturn.cpp  codigoSwCa.cpp
Sesiones/Sesion3/: README.md  address.cpp  define.cpp  enums.cpp  main.cpp  punteros1.cpp  punteros2.cpp  punterosDobles.cpp  punterosYArreglos.cpp  punterosYEstructuras.cpp  punterosYFunciones.cpp  recursividad.cpp  sentenciaGoto.cpp  sum.cpp  sum.hpp  typeCasting.cpp
Sesiones/Sesion4/: README.md
Tarea1/: Doxyfile  Makefile  README.md
Tarea2/: Doxyfile  Makefile  README.md
Tarea2/src/: main  (+4 more)
Tarea3/: Doxyfile  Makefile  README.md
Tarea4/: Makefile  README.md
Tarea5/: README.md
Tarea6/: Makefile  README.md
Tarea7/: CMakeLists.txt  Makefile  README.md
Tarea7/.github/workflows/: ci.yml
Tarea7/src/: calculos.cpp  calculos.hpp  inventario.cpp  inventario.hpp  main  main.cpp
Tarea7/tests/: functionalTesting.cpp  testCalculos.cpp  testInventario.cpp  testTDD.cpp
(+301 files in other folders)
